# ubb

./: README.md  Semestrul 1
Semestrul 1/Arhitectura Sistemelor de Calcul/Exercitii Practic/: date1.txt.txt  date11.txt  date13.txt  date16.txt  date18.txt  date26.txt  date29.txt  f1.asm  f1.lst  f11.asm  f11.lst  f13.asm  f13.lst  f16.asm  f16.lst  f18.asm  f18.lst  f19.asm  f19.lst  f20.asm  f20.lst  f22.asm  f22.lst  f26.asm  f26.lst  f29.asm  f29.lst  f6.asm  f6.lst  p1.asm  p1.lst  p10.asm  p10.lst  p11.asm  p11.lst  p12.asm  p12.lst  p13.asm  p13.lst  p14.asm  (+49 more)
Semestrul 1/Fundamentele Programării/: documentatie_lab3.docx  lab2_p5.py  lab2_p9.py  lab3.py  seminar2.docx  seminar2.py  seminar3.docx  seminar3.py
Semestrul 1/Fundamentele Programării/examen_practic/: date.txt  main.py
Semestrul 1/Fundamentele Programării/lab13/: problema4.py
Semestrul 1/Fundamentele Programării/lab4-6/: DOCUMENTATIE.docx  MAIN.py  cheltuiala.py  consola.py  lab 4-6.py  manage_cheltuiala.py  teste_cheltuiala.py  teste_manage_cheltuiala.py  utils.py
Semestrul 1/Fundamentele Programării/lab7-9/: main.py
Semestrul 1/Fundamentele Programării/pregatire_practic/: console.py  date.txt  main.py
Semestrul 1/Fundamentele Programării/simulare/: date.txt  main.py
Semestrul 2/OOP/: lab1_oop.c
Semestrul 2/OOP/MovieManagement/: CMakeLists.txt
Semestrul 2/OOP/proiect_final/: CMakeLists.txt  CosCRUDGUI.h  CosReadOnlyGUI.h  cosfilme.cpp  cosfilme.h  dto.h  erori.h  film.cpp  film.h  filmGUI.cpp  filmGUI.h  filmrepo.cpp  filmrepo.h  filmservice.cpp  filmservice.h  fisiertest.txt  main.cpp  modeltabel.h  observator.h  test.csv  test.html  test69.html  teste.cpp  teste.h  ui.cpp  ui.h  undo.h  (+3 more)
Semestrul 2/Structuri de Date si Algoritmi/lab3/: CMakeLists.txt
Semestrul 2/Structuri de Date si Algoritmi/lab3/Proiect C++/: App.cpp  CP.cpp  CP.h
Semestrul 2/Structuri de Date si Algoritmi/lab3/Teste/: TestScurt.cpp
Semestrul 2/Structuri de Date si Algoritmi/lab4/: CMakeLists.txt
Semestrul 2/Structuri de Date si Algoritmi/lab4/Proiect C++/: App.cpp  IteratorLP.cpp  IteratorLP.h  Lista.cpp  Lista.h
Semestrul 2/Structuri de Date si Algoritmi/lab4/Teste/: TestExtins.cpp  TestScurt.cpp
Semestrul 2/Structuri de Date si Algoritmi/lab6/: CMakeLists.txt
Semestrul 2/Structuri de Date si Algoritmi/lab6/Colectie/: App.cpp  Colectie.cpp  Colectie.h  IteratorColectie.cpp
Semestrul 2/Structuri de Date si Algoritmi/lab6/Teste/: TestExtins.cpp  TestScurt.cpp
Semestrul 2/Structuri de Date si Algoritmi/lab7/: CMakeLists.txt
Semestrul 2/Structuri de Date si Algoritmi/lab7/Proiect C++/: App.cpp  IteratorMDO.cpp  IteratorMDO.h  MDO.cpp  MDO.h
Semestrul 2/Structuri de Date si Algoritmi/lab7/Teste/: TestExtins.cpp  TestScurt.cpp
Semestrul 3/Baze de Date/: lab1+2.sql  lab3.sql  lab4_1.sql  lab4_2.sql  lab5.sql  practic.sql
Semestrul 3/Programare Logica si Functionala/: l1.lsp  l2.lsp  l3.lsp  p1.pl  p2.pl  p3.pl  testprolog.pl
Semestrul 3/Retele de Calculatoare/: reteacisco.pkt
Semestrul 4/SGBD/: README.md
(+748 files in other folders)
